vlib/v/checker/tests/cast_to_interface_err.out
vlib/v/checker/tests/cast_to_interface_err.vv:20:9: error: `CustomError` doesn't implement method `msg` of interface `IError`
   18 | 
   19 | fn my_error() IError {
   20 |     return IError(CustomError{})
      |            ~~~~~~~~~~~~~~~~~~~~~
   21 | }
vlib/v/checker/tests/cast_to_interface_err.vv:20:9: error: `CustomError` doesn't implement method `code` of interface `IError`
   18 | 
   19 | fn my_error() IError {
   20 |     return IError(CustomError{})
      |            ~~~~~~~~~~~~~~~~~~~~~
   21 | }
vlib/v/checker/tests/cast_to_interface_err.vv:20:9: error: `CustomError` does not implement interface `IError`, cannot cast `CustomError` to interface `IError`
   18 | 
   19 | fn my_error() IError {
   20 |     return IError(CustomError{})
      |            ~~~~~~~~~~~~~~~~~~~~~
   21 | }
